# netprox

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini  wsgi.py
.github/workflows/: base_checks.yml  ci.yml  docker.yml  tox.yml
netprox/: backend.py  main.py  wsgi.py
netprox/classes/: Config.py  Core.py  __init__.py
netprox/templates/: base.html  error.html  multiple_interfaces.html  success.html
tests/: test_app.py
