[tool.pylint.format]
max-line-length = "79"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]
ignore = [
    "E501",
    ]


[tool.poetry]
name = "netprox"
version = "0.1.0"
description = "Netbox and Proxmox integration"
authors = ["Christopher Hoffmann <the.chris@zalando.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
pynetbox = "7.2.0"
proxmoxer = "1.3.1"
flask = "2.2.5"
gunicorn = "20.1.0"
requests = "2.27.1"
pytest = "^7.4.3"
ruff = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
